[gd_scene load_steps=6 format=3 uid="uid://qx75nh8o2dei"]

[ext_resource type="Script" path="res://HomeScene/HomeScene.gd" id="1_61c47"]
[ext_resource type="Texture2D" uid="uid://cfhhffge2ctwb" path="res://Backgrounds/menu.png" id="2_4yfht"]
[ext_resource type="FontFile" uid="uid://bwyo2j22ormdr" path="res://Font/OldLondon.ttf" id="3_5eei2"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rwu1x"]
texture = ExtResource("2_4yfht")
expand_margin_right = 25.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e8flt"]

[node name="HomeScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1154.0
offset_bottom = 649.0
script = ExtResource("1_61c47")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
offset_right = 1153.0
offset_bottom = 647.0
theme_override_styles/panel = SubResource("StyleBoxTexture_rwu1x")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 129.0
offset_top = 213.0
offset_right = 413.0
offset_bottom = 561.0

[node name="PlayButton" type="Button" parent="Panel/VBoxContainer"]
material = SubResource("ShaderMaterial_e8flt")
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_hover_pressed_color = Color(0.760784, 0.639216, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_pressed_color = Color(0.759651, 0.638524, 7.70092e-07, 1)
theme_override_fonts/font = ExtResource("3_5eei2")
theme_override_font_sizes/font_size = 40
text = "Start Game"

[node name="LoadGameButton" type="Button" parent="Panel/VBoxContainer"]
material = SubResource("ShaderMaterial_e8flt")
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_hover_pressed_color = Color(0.760784, 0.639216, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_pressed_color = Color(0.759651, 0.638524, 7.70092e-07, 1)
theme_override_fonts/font = ExtResource("3_5eei2")
theme_override_font_sizes/font_size = 40
text = "Load Game"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer"]
material = SubResource("ShaderMaterial_e8flt")
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_hover_pressed_color = Color(0.760784, 0.639216, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_pressed_color = Color(0.759651, 0.638524, 7.70092e-07, 1)
theme_override_fonts/font = ExtResource("3_5eei2")
theme_override_font_sizes/font_size = 40
text = "Quit
"

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 18.0
offset_top = 47.0
offset_right = 522.0
offset_bottom = 178.0
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_5eei2")
theme_override_font_sizes/font_size = 55
text = "Rise of The Fallen
 Kingdom"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Panel/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/LoadGameButton" to="." method="_on_LoadGameButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
